--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.287.0",
-    "next": "13.5.4",
+    "axios": "^1.6.1",
+    "lucide-react": "^0.292.0",
+    "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "autoprefixer": "^10",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
